--- a/client/content/content.html
+++ b/client/content/content.html
@@ -1,3 +1,87 @@
 <template name="content">
+    <section class="blue-bg-img">
+        <div class="container ">
+            <div class="section">
+                <div class="section">
+                    <h2 class="center-align white-text">Lorem <span class="wikicoda"><strong>WikiCoda</strong></span></h2>
+                    <h4 class="center-align white-text"><strong>LOREM IPSUM DOLOR SIT AMET</strong></h4>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="grey lighten-5">
+        <div class="container section">
+            <div class="row">
+                <div class="col m4 s12">
+                    <h3 class="center-align red-text"><span class="material-icons ">laptop_windows</span></h3>
+                    <h5 class="center-align">DESIGN</h5>
+                    <p class="center-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut commodi dolore dolorem dolores ea explicabo,
+                        impedit laborum modi, nisi quasi quibusdam quis, rem repellendus sed sint temporibus ut voluptas?</p>
+                </div>
+                <div class="col m4 s12">
+                    <h3  class="center-align red-text"><span class="material-icons ">favorite</span></h3>
+                    <h5 class="center-align">SITE</h5>
+                    <p class="center-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut commodi dolore dolorem dolores ea explicabo,
+                        impedit laborum modi, nisi quasi quibusdam quis, rem repellendus sed sint temporibus ut voluptas?</p>
+                </div>
+                <div class="col m4 s12">
+                    <h3  class="center-align red-text"><span class="material-icons">filter_drama</span></h3>
+                    <h5 class="center-align">SUPPORT</h5>
+                    <p class="center-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut commodi dolore dolorem dolores ea explicabo,
+                        impedit laborum modi, nisi quasi quibusdam quis, rem repellendus sed sint temporibus ut voluptas?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="grey lighten-3">
+        <div class="container section">
+            <h5 class="center-align ">PORTFOLIO</h5>
+            <div class="row">
+                <div class="col m4 s12">
+                    <img src="/images/p01.png" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m4 s12">
+                    <img src="/images/p02.png" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m4 s12">
+                    <img src="/images/p03.png" alt="" class="center-align responsive-img">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="grey lighten-5">
+        <div class="row">
+            <div class="col m6 offset-m3 section">
+                <h5 class="center-align">Lorem Ipsum dolor sit.</h5>
+                <p class="center-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet beatae culpa dolore id libero magnam, nobis officia quidem, ratione reiciendis rerum sed soluta suscipit tempore, temporibus ullam voluptas voluptates!</p>
+            </div>
+            <div class="col offset-m2 m8">
+                <img src="/images/munter.png" alt="" class="responsive-img">
+            </div>
+        </div>
 
+
+    </section>
+    <section class="section yolo" style="background-color: #ebebeb">
+        <div class="row">
+            <h5 class="center-align">NOS CLIENTS</h5>
+            <div class="col offset-m2 m10 s12">
+                <div class="col m2 s12">
+                    <img src="/images/c01.gif" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m2 s12">
+                    <img src="/images/c02.gif" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m2 s12">
+                    <img src="/images/c03.gif" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m2 s12">
+                    <img src="/images/c04.gif" alt="" class="center-align responsive-img">
+                </div>
+                <div class="col m2 s12">
+                    <img src="/images/c05.gif" alt="" class="center-align responsive-img">
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
