--- a/client/footer/footer.html
+++ b/client/footer/footer.html
@@ -1,3 +1,27 @@
 <template name="footer">
-
+    <section class="">
+        <div class="row red accent-2">
+            <div class="container section">
+                <h5 class="center-align">Lorem Ipsum dolor sit.</h5>
+                <p class="center-align" style="color: black">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus amet beatae culpa dolore id libero magnam, nobis officia quidem, ratione reiciendis rerum sed soluta suscipit tempore, temporibus ullam voluptas voluptates!</p>
+            </div>
+        </div>
+        <div class="" style="background-color: #2d2d2d">
+            <div class="container section">
+                <div class="row">
+                    <div class="col offset-m5 m2 offset-s4 s4">
+                        <div class="col s4">
+                            <span class="material-icons white-text">wc</span>
+                        </div>
+                        <div class="col s4">
+                            <span class="material-icons white-text">whatshot</span>
+                        </div>
+                        <div class="col s4">
+                            <span class="material-icons white-text">local_bar</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </template>
